tests/baselines/reference/importedModuleAddToGlobal.errors.txt
importedModuleAddToGlobal.ts(15,23): error TS2833: Cannot find namespace 'b'. Did you mean 'B'?


==== importedModuleAddToGlobal.ts (1 errors) ====
    // Binding for an import statement in a typeref position is being added to the global scope
    // Shouldn't compile b.B is not defined in C
    namespace A {
        import b = B;
        import c = C;
    }
    
    namespace B {
        import a = A;
        export class B { }
    }
    
    namespace C {
        import a = A;
        function hello(): b.B { return null; }
                          ~
!!! error TS2833: Cannot find namespace 'b'. Did you mean 'B'?
!!! related TS2728 importedModuleAddToGlobal.ts:8:11: 'B' is declared here.
    }